<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Savr</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="tab4">Tab4</string>
    <string name="tab5">Tab5</string>
    <string name="applicationId">625478440801464</string>

    <!-- Labels -->
    <string name="lbl_enter_code"> Enter Code</string>
    <string name="lbl_connecting">Connecting to server...</string>
    <string name="lbl_left_menu_restaurants">Restaurants</string>
    <string name="lbl_friends">amis</string>
    <string name="lbl_friends_profile">amis</string>
    <string name="lbl_my_friends">mes amis</string>
    <string name="lbl_top_saves">top saves</string>
    <string name="lbl_saves">saves</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_my_friends_fr">mes amis</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_no">Non</string>
    <string name="dialog_call">Voulez-vous appeler?</string>

    <!-- Messages -->
    <string name="msg_no_network">Connection failed.</string>
    <string name="msg_need_network">This action requires network access. Please enable mobile network or Wi-Fi.</string>
    <string name="msg_loading_in_progress">Loading...</string>
    <string name="msg_saved_codes">There are %1$d pending codes. Connect to internet and click <font color="blue"><b><u>here</u></b></font> to send them.</string>
    <string name="msg_success">Success</string>
    <string name="msg_item_like">You have liked this item</string>
    <string name="msg_item_not_like">The item was not liked</string>
    <string name="msg_already_shared">This item is already shared</string>
    <string name="msg_share_twitter">You have shared this item on Twitter.</string>
    <string name="msg_share_facebook">You have shared this item on Facebook.</string>
    <string name="msg_how_to_login">Go to tab \'Social\' or \'Profile\' and log in.</string>
    <string name="msg_already_saved">This item has already been saved.</string>
    <string name="msg_liked">You have liked this item.</string>
    <string name="msg_find_item">Save ajouté.</string>
    <string name="msg_no_connection">No connection.</string>
    <string name="msg_code_saved">Code was saved.</string>
    
    

    <!-- Buttons -->

    <string name="btn_send_or_save">Send</string>
    <string name="btn_change_settings">Settings</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">OK</string>
    <string name="btn_twitter_logout">Logout from Twitter</string>
    <string name="btn_twitter_login">Login with Twitter</string>
    <string name="btn_menu_logout">Logout</string>

    <!-- Errors -->
    <string name="msg_error">Error!</string>
    <string name="error_code_length">The code must be six digits long.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_my_saves">MySavesActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="error_dialog_title">Something Went Wrong</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="exception">Exception: %1$s</string>
    <string name="error_login">Can not log you in.</string>
    <string name="error_cannot_validate">Error! Cannot validate code:</string>
    <string name="error_internet">Internet Connection Error</string>
    <string name="error_internet_connect">Please connect to working Internet connection</string>
    <string name="error_not_login">You are not logged in.</string>
    <string name="error_login_first">Please log in with Facebook or Twitter to create a token.</string>
    
    
    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_button_text">Thanks!</string>
    <string name="result_dialog_text">Posted Open Graph action, id: %1$s</string>
    <string name="progress_dialog_text">Announcing, please wait...</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_price">prix</string>
    <string name="title_categories">CATEGORIES</string>
    <string name="title_internet">internet</string>
    <string name="title_article">article</string>
    <string name="category_dernier">Mes derniers saves</string>
    <string name="category_recent">Restaurants</string>
    <string name="category_restaurant">Restaurants</string>
    <string name="category_cinema">Films</string>
    <string name="category_livre">Livres</string>
    <string name="category_exposition">Expositions</string>
    <string name="category_bar">Bars</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_theatre">Théâtre</string>
    <string name="category_musique">Musique</string>
    <string name="category_hotel">Hôtels</string>
    <string name="category_autre">Autre</string>
    <string name="category_concert">Concerts</string>
    <string name="category_evenement">Evénement</string>
    <string name="category_divers">Divers</string>
    <string name="category_tous">Tous</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="prix">prix</string>
    <string name="adresse">adresse</string>
    <string name="artistes">artistes</string>
    <string name="numero">numero</string>
    <string name="date_debut">date_debut</string>
    <string name="date_fin">date_fin</string>
    <string name="horaires">horaires</string>
    <string name="marque">marque</string>
    <string name="acteurs">acteurs</string>
    <string name="label">label</string>
    <string name="groupe">groupe</string>
    <string name="genre">genre</string>
    <string name="realisateur">realisateur</string>
    <string name="type_de_cuisine">type_de_cuisine</string>
    <string name="auteur">auteur</string>
    <string name="edition">edition</string>
    <string name="title_activity_twitter_login">TwitterLoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="btn_confirm">OK</string>
    <string name="label_code_tx">Entrez un code Savr pour sauvegarder son contenu</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_delete">Delete.</string>
    <string name="msg_delete_item">Are you sure you want to delete this item.</string>
    <string name="search_label">Rechercher dans mes Saves...</string>
    
    

</resources>