<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/menuPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <!-- Search -->

       <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/searchImage"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:src="@drawable/field_search" />

            <EditText
                android:id="@+id/edittext"
                android:layout_width="fill_parent"
                android:layout_height="50dp" 
                android:textColor="@color/light_blackD101101101"
                android:text="@string/search_label"
                android:singleLine="true"
                android:layout_marginRight="10dp"
                android:textSize="13dp"/>
        </RelativeLayout>
		<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/cat_bg">

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/categoriesLabel"
                android:layout_height="20dp"
                android:layout_width="fill_parent"
                android:layout_gravity="left"
                android:text="@string/title_categories" 
                android:layout_marginLeft="0pt"
                android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:paddingLeft="5dp"
                android:textSize="14dp"
                android:textColor="@android:color/white"/>

        </FrameLayout>
        <!-- Store -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryDerniereSaves"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/derniers_saves"
                android:text="@string/category_dernier" 
                android:layout_marginLeft="5pt"
                android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatDerSaves"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryRestaurnats"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_restaurant"
                android:text="@string/category_restaurant" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatRestNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryCinema"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_cinema"
                android:text="@string/category_cinema" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatCinemaNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryLivre"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_livre"
                android:text="@string/category_livre" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatLivreNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryExposition"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_exposition"
                android:text="@string/category_exposition" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatExpositionNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryBar"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_bar"
                android:text="@string/category_bar" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatBarNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryHotel"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_hotel"
                android:text="@string/category_hotel" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatHotelNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryShopping"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_shopping"
                android:text="@string/category_shopping" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatShoppingNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryTheatre"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_theatre"
                android:text="@string/category_theatre" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatTheatreNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryMusique"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_musique"
                android:text="@string/category_musique" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatMusiqueNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryEvenement"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_evenement"
                android:text="@string/category_evenement" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatEvenementNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:background="@drawable/slide_menu_on_select">

            <Button
                android:id="@+id/btnSlideMenuCategoryDivers"
                style="@style/slideMenuItemButton"
                android:drawableLeft="@drawable/left_menu_divers"
                android:text="@string/category_divers" 
                android:layout_marginLeft="5pt"
                 android:layout_marginTop="2pt"
                android:layout_marginBottom="2pt"
                android:textSize="17dp"/>

            <com.proxiad.savr.common.CustomTextViewMuseo
                android:id="@+id/tvCatDiversNum"
                style="@style/slideMenuItemNumber" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>